--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "heroku-postbuild": "npm start"
+    "heroku-postbuild": "node server.js"
   },
   "eslintConfig": {
     "extends": "react-app"
